--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,7 @@
 	<classpathentry kind="lib" path="C:/Users/popina/Dropbox/Fakultet/Zastita podataka/x509-security-certificate/lib/swing-worker-1.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/popina/Dropbox/Fakultet/Zastita podataka/x509-security-certificate/lib/X509_2017.jar"/>
 	<classpathentry kind="lib" path="C:/Users/popina/Dropbox/Fakultet/Zastita podataka/x509-security-certificate/lib/jdatepicker-1.3.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/popina/Dropbox/Fakultet/Zastita podataka/x509-security-certificate/lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/popina/Dropbox/Fakultet/Zastita podataka/x509-security-certificate/lib/bcpkix-jdk15on-157.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
